force-app/main/default/objects/Training_Schedule__c/Training_Schedule__c.object-meta.xml
<CustomObject>
    <label>Training Schedule</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>