force-app/main/default/objects/Training_Schedule__c/fields/Subtopics__c.field-meta.xml
<CustomField>
    <fullName>Subtopics__c</fullName>
    <label>Subtopics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>