force-app/main/default/objects/Training_Schedule__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>This field is topic field.It contain only text.</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>