force-app/main/default/objects/Training_Schedule__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Training Schedules</relationshipLabel>
    <relationshipName>Training_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>