force-app/main/default/objects/Training_Schedule__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <formula>Trainer__r.First_Name__c + &quot; &quot; + Trainer__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trainer Name</label>
    <type>Text</type>
</CustomField>