force-app/main/default/objects/Training_Schedule__c/listViews/All_Training_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Training_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Topic__c</columns>
    <columns>Subtopics__c</columns>
    <columns>Trainer__c</columns>
    <columns>Schedule_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Training Schedules</label>
</ListView>